syntax = "proto3";

package gen;

import "google/protobuf/timestamp.proto";

option go_package = "ms-practice/proto/gen";

message Payment {
    int32 id = 1;
    int32 user_id = 2;
    int32 booking_id = 3;
    int32 quantity = 4;
    float prices = 5;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    repeated PaymentHistory payment_history = 9;
}


message PaymentHistory {
    int32 id = 1;
    int32 payment_id = 2;
    string status = 3;
    string logs = 4;
    string paid_at = 5;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message GetPaymentRequest {
    int32 id = 1;
    int32 payment_id = 2;
}

message GetPaymentResponse {
    Payment payment = 1;
}

service PaymentService {
    rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
}
